--- a/react-components/package.json
+++ b/react-components/package.json
@@ -8,7 +8,9 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "eslint": "eslint --ext .tsx --ext .ts src/",
+    "eslint:fix": "eslint --ext .tsx --ext .ts src/ --fix"
   },
   "dependencies": {
     "react": "^18.2.0",
