--- a/react-components/package.json
+++ b/react-components/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "babel-plugin-istanbul": "^6.1.1",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -50,6 +51,7 @@
     "prettier": "^2.6.2",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
+    "vite-plugin-eslint": "^1.8.1",
     "vitest": "^0.29.3"
   }
 }
